Bug 321115 - Weird behavior when opening an already-opened chat from the contact list plasmoid
Summary: Weird behavior when opening an already-opened chat from the contact list plas...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: chat-plasmoid (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-13 15:39 UTC by Aleix Pol
Modified: 2013-07-16 21:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2013-06-13 15:39:27 UTC
If I re-open an already opened conversation, the popup stops working properly.

Reproducible: Always

Steps to Reproduce:
1. I chat with somebody, then I forget about the conversation
2. I want to talk to the same person again, so instead of going to the thing directly, I press my contact list shortcut and start a conversation with the same person
3. Now when I write to the person I don't receive what I say (although I think that the receiver does). It's pretty much broken from there.


Expected Results:  
The plasmoid should know there's attention required to the said conversation and pop up.
Comment 1 David Edmundson 2013-06-13 16:25:20 UTC
That's reopening from the contact list applet right?

i.e reopening with the preferred handler set to the chat plasmoid and the "delegateToPrefferedHandler" is not set.

Can you add debug to conversations-model.cpp and check it goes down the right path.
Comment 2 David Edmundson 2013-07-16 21:49:43 UTC
Git commit 953a4d52de3d38fe13d43e41113966e2808ae13a by David Edmundson.
Committed on 16/07/2013 at 21:47.
Pushed by davidedmundson into branch 'master'.

Only try to replace TextChannel in setTextChannel if it has actually changed

Reviewed-by: Aleix Pol
Fixed-in: 0.7.0

M  +7    -5    KTp/Declarative/conversation.cpp
M  +1    -0    KTp/Declarative/messages-model.cpp

http://commits.kde.org/telepathy-common-internals/953a4d52de3d38fe13d43e41113966e2808ae13a