Only try to replace TextChannel in setTextChannel if it has actually changed

Reviewed-by: Aleix Pol
BUG: 321115
Fixed-in: 0.7.0